assets/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ibm-vpc-block-csi-driver-controller-metrics-serving-cert
  labels:
    app: ibm-vpc-block-csi-driver-controller-metrics
  name: ibm-vpc-block-csi-driver-controller-metrics
  namespace: openshift-cluster-csi-drivers
spec:
  ports:
    - name: provisioner-m
      port: 9202
      protocol: TCP
      targetPort: provisioner-m
    - name: attacher-m
      port: 9203
      protocol: TCP
      targetPort: attacher-m
    - name: resizer-m
      port: 9204
      protocol: TCP
      targetPort: resizer-m
    - name: snapshotter-m
      port: 9205
      protocol: TCP
      targetPort: snapshotter-m
    - name: driver-m
      port: 9206
      protocol: TCP
      targetPort: driver-m
  selector:
    app: ibm-vpc-block-csi-driver
  sessionAffinity: None
  type: ClusterIP
