assets/network-policy-allow-ingress-to-csi-driver-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-ingress-to-ibm-vpc-block-metrics
 namespace: openshift-cluster-csi-drivers
 annotations:
  include.release.openshift.io/hypershift: "true"
  include.release.openshift.io/ibm-cloud-managed: "true"
  include.release.openshift.io/self-managed-high-availability: "true"
  include.release.openshift.io/single-node-developer: "true"
  capability.openshift.io/name: Storage
spec:
 podSelector:
   matchLabels:
     openshift.storage.network-policy.ibm-vpc-block-metrics: allow
 ingress:
 - ports:
   - protocol: TCP
     port: 9080
 policyTypes:
 - Ingress
